--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <section class="controls">
             <h1>Piano | Souzzagabe</h1>
 
-            <label for="">
+            <label class="checkbox__label">
                 Show Keys
                 <span class="switcher">
                     <span class="switcher__button"></span>
                 </span>
-            <input type="checkbox" name="" id="" class="checkbox__keys">
+            <input type="checkbox" name="" id="" class="checkbox__keys" hidden>
             </label>
             
         </section>
 
-        <section class="piano__keys">
+        <section class="piano__keys disabled-keys">
 
             <div class="key white" data-note="1"><span>TAB</span></div>
             <div class="key black" data-note="2"><span>1</span></div>
